# swarm

./: .capture.yaml  .shotlist.yaml  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml  release.yml
agents/: swarm-implementer.md  swarm-reader.md  swarm-verifier.md
docs/: test-evidence.md
docs/benchmark/: .gitignore  PLAN.md
docs/benchmark/bench/: mutate.py  score.py  seed_bugs.py
docs/benchmark/results/v1-void/: POSTMORTEM.md  answer_key-v1.json  report-solo.md  report-swarm.md
docs/examples/ladder-duo/: graph-violation.json  graph.json
docs/screenshots/: index.html  manifest.json
docs/superpowers/plans/: 2026-06-10-model-tiering.md  2026-06-10-swarm-orchestrator.md  2026-07-07-model-ladders.md
docs/superpowers/specs/: 2026-06-10-model-tiering-design.md  2026-06-10-swarm-orchestrator-design.md  2026-07-07-effort-gc-design.md  2026-07-07-model-ladders-design.md
hooks/: hooks.json
skill/: SKILL.md
skill/references/: graph-format.md  packet-guide.md  shapes.md
skills/swarm/: SKILL.md
skills/swarm/references/: graph-format.md
swarm_lib/: cli.py  extract.py  graph.py  hook.py  install.py  marker.py  paths.py  runs.py
tests/: conftest.py  test_cli.py  test_extract.py  test_graph.py  test_hook.py  test_install.py  test_integration.py  test_marker.py  test_paths.py  test_plugin_artifacts.py  test_runs.py
tests/node/: executor.test.mjs  package.json
workflows/: run_graph.mjs  swarm-run.footer.js  swarm-run.header.js
