[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-swarm"
version = "0.1.0"
description = "Graph-first multi-agent orchestrator for Claude Code"
requires-python = ">=3.11"

[project.scripts]
swarm = "swarm_lib.cli:main"

[tool.setuptools.packages.find]
include = ["swarm_lib*"]
