[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-swarm"
version = "0.2.0"
description = "Graph-first multi-agent orchestrator for Claude Code - parallel task graphs, hook-written checkpoints, ask-first resume, right-sized model tiers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude-code", "claude", "agents", "orchestration", "multi-agent", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/varmabudharaju/swarm"
Repository = "https://github.com/varmabudharaju/swarm"
Issues = "https://github.com/varmabudharaju/swarm/issues"

[project.scripts]
swarm = "swarm_lib.cli:main"

[tool.setuptools.packages.find]
include = ["swarm_lib*"]
