[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-swarm"
version = "0.4.0"
description = "Graph-first multi-agent orchestrator for Claude Code - parallel task graphs, hook-written checkpoints, ask-first resume, right-sized model tiers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude-code", "claude", "agents", "orchestration", "multi-agent", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/varmabudharaju/swarm"
Repository = "https://github.com/varmabudharaju/swarm"
Issues = "https://github.com/varmabudharaju/swarm/issues"

[project.scripts]
swarm = "swarm_lib.cli:main"

# Wheels must be self-contained: the installer's assets (workflows/, skills/,
# agents/) live at the repo root for dev + plugin use, and are force-included
# into swarm_lib/_assets for wheel installs (see install.asset_root()).
[tool.hatch.build.targets.wheel]
packages = ["swarm_lib"]

[tool.hatch.build.targets.wheel.force-include]
"workflows" = "swarm_lib/_assets/workflows"
"skills" = "swarm_lib/_assets/skills"
"agents" = "swarm_lib/_assets/agents"

[tool.hatch.build.targets.sdist]
include = [
  "swarm_lib", "workflows", "skills", "agents", "hooks", "bin",
  ".claude-plugin", "tests", "README.md", "LICENSE", "pyproject.toml",
]
